# Kinect-Hack--Green-Screen

./: CMakeLists.txt  README  change_detection.cpp  cool_hack.cpp  cool_hack3.cpp  cyl_seg.cpp  cyl_seg_kinect.cpp  kinect_benchmark.cpp  kinect_viz.cpp  pcd_normals.cpp  read_pcd.cpp  test.cpp
cmake/Modules/: FindOpenCV.cmake
